[project]
name = "leaderboard"
version = "0.1.0"
description = "Strava Leaderboard API Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "fastapi[standard]>=0.104.1",
    "uvicorn>=0.24.0",
    "apscheduler>=3.10.4",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pylint>=3.3.7",
]
